# claude-code-book-template

./: .gitignore  index.html
.github/workflows/: library-check.yml
library-traverse/: .gitignore  GITHUB_ACTIONS.md  INSTALL_WINDOWS.md  config.yaml.example  debug_ajax.py  debug_all.py  debug_atsugi_dates.py  debug_bibdetail.py  debug_detail.py  debug_detail2.py  debug_detail3.py  debug_detail_urls.py  debug_ebina.py  debug_isehara.py  debug_isehara2.py  debug_isehara3.py  debug_isehara4.py  debug_lend.py  debug_lics_saas.py  debug_login.py  debug_machida.py  debug_playwright.py  debug_sagamihara.py  debug_urls.py  debug_userinfo.py  pyproject.toml
library-traverse/src/library_traverse/: __init__.py  config.py  display.py  hours.py  html_export.py  main.py  models.py  ndl.py  pdf_export.py
library-traverse/src/library_traverse/libraries/: __init__.py  base.py  ebina.py  fujitsu_ilis.py  kawasaki.py  limedio.py  nec_lics_saas.py  nec_lics_xp.py
mouse/: README.md  mouse.ino
tokaido/: gps_trace_video.py
