[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "library-traverse"
version = "0.1.0"
description = "神奈川・東京エリア図書館の予約・貸出状況チェッカー"
requires-python = ">=3.11"
dependencies = [
    "httpx[http2]>=0.27",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
    "rich>=13.0",
    "pyyaml>=6.0",
    "anyio>=4.0",
    "playwright>=1.58.0",
    "jpholiday>=0.1.9",
]

[project.scripts]
library-traverse = "library_traverse.main:run"

[tool.hatch.build.targets.wheel]
packages = ["src/library_traverse"]
